Add dialog fragment with attributes of the character

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="team_title">Choose your characters</string>
     <string name="team_character_number">Character </string>
 
-    <string name="hero_1">Alissa</string>
+    <string name="hero_1">Allisa</string>
     <string name="hero_2">Arjhan</string>
     <string name="hero_3">Bruenor</string>
     <string name="hero_4">Catti-Brie</string>
