Beginning of the game activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,7 @@
     <string name="attack">Attaque</string>
     <string name="damage">Dommage</string>
 
+    <string name="lifes">Lifes</string>
+    <string name="base_life">3</string>
+
 </resources>
